tests/compile_fail/invalid_relative_selector_list_empty.rs
use surgeist_style::RelativeSelectorList;

fn main() {
    let _list = RelativeSelectorList {
        selectors: Vec::new(),
    };
}
