tests/compile_fail/invalid_relative_selector_list_empty.stderr
error[E0451]: field `selectors` of struct `RelativeSelectorList` is private
 --> tests/compile_fail/invalid_relative_selector_list_empty.rs:5:9
  |
4 |     let _list = RelativeSelectorList {
  |                 -------------------- in this type
5 |         selectors: Vec::new(),
  |         ^^^^^^^^^ private field
